# O.S-Service

./: Cargo.toml  index.html  package-lock.json  package.json  teste  tsconfig.json  vite.config.ts
database/: schema.sql
server/: package-lock.json  package.json
server/src/: server.ts  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs
src/context/: UserContext.tsx
src/pages/: AdminUserManagement.tsx  CreateTicketPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
src/pages/TicketPage/components/: TicketForm.tsx  styles.css
src/services/: ticketService.ts
src/styles/: styles.tsx
src/types/: interfaces.ts  tickets.types.ts
src/types/services/: ticketService.ts
