[package]
name = "O.S Service"
version = "0.1.0"
description = "Sistema de Gestão de Ordens de Serviço"
authors = ["Fxdf-IV"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["shell-open"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
